# CWD-Langgraph-P2P

agent-system/: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MODULES.md  PROD_TRANSPORT.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  VALIDATION_CHECKLIST.md  docker-compose.yml  example_e2e.py  pyproject.toml  requirements.txt
agent-system/.github/: copilot-instructions.md
agent-system/coordinator/: __init__.py  agent.py
agent-system/core/: __init__.py  a2a_messaging.py  a2a_servicebus_adapter.py  a2a_transport.py  langgraph_state.py  redis_client.py
agent-system/distributor/: __init__.py  agent.py
agent-system/tests/: manual_assign_test.py  test_core.py  test_integration_a2a.py
agent-system/worker/: __init__.py  agent.py
