[project]
name = "agent-system"
version = "0.1.0"
description = "Three-tier agent system with LangGraph, Redis, and A2A messaging"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.4",
    "redis>=5.0.1",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "aioredis>=2.0.1",
    "httpx>=0.25.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "coordinator*", "distributor*", "worker*"]
